--- a/config
+++ b/config
@@ -1,9 +1,9 @@
 
-image=bcm27xx-bcm2711
+image=rockchip-armv8
 
-openwrt_version=23.05.0
+openwrt_version=SNAPSHOT
 
-packages=block-mount -iwinfo
+packages=block-mount
 
 disabled_services=
 
