--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,6 +21,7 @@ jobs:
       
       - name: Load configuration from repo
         run: |
+          docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT make
           find .
           cat config
           cat config >> $GITHUB_ENV
