Enhance workflow to include pwd command
Added a command to print the working directory in the workflow.

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,8 +21,8 @@ jobs:
       
       - name: Load configuration from repo
         run: |
-          docker run --rm openwrt/imagebuilder:bcm27xx-bcm2710-24.10.4 make help
-          docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT make
+          docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT make help
+          docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT pwd
           find .
           cat config
           cat config >> $GITHUB_ENV
