--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,8 +21,8 @@ jobs:
       
       - name: Load configuration from repo
         run: |
-          docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT "ls -la *"
           docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT pwd
+          docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT find .
           find .
           cat config
           cat config >> $GITHUB_ENV
