--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Load configuration from repo
         run: |
           docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT pwd
-          docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT ./setup.sh
+          docker run --rm openwrt/imagebuilder:rockchip-armv8-SNAPSHOT sh -c ./setup.sh
           find .
           cat config
           cat config >> $GITHUB_ENV
