--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -26,7 +26,7 @@ jobs:
           cat config >> $GITHUB_ENV
        
       - name: Build openwrt image
-        uses: izer-xyz/openwrt-imagebuilder-action@v7
+        uses: izer-xyz/openwrt-imagebuilder-action@main
         with:
           image: ${{ env.image }}
           profile: ${{ env.profile }}
